force-app/main/default/objects/NBAC_Financial_Analysis__c/NBAC_Financial_Analysis__c.object-meta.xml
<CustomObject>
    <description>NBAC specific financial analysis details for the related Group Client record</description>
    <label>NBAC Financial Analysis</label>
    <nameField>
        <label>NBAC Financial Analysis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NBAC Financial Analysis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>