force-app/main/default/objects/NBAC_Financial_Analysis__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NBAC Financial Analysis</relationshipLabel>
    <relationshipName>NBAC_Financial_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>