force-app/main/default/objects/NBAC_Financial_Analysis__c/fields/Business_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Business_Assessment__c</fullName>
    <description>Related Business Assessment</description>
    <label>Business Assessment</label>
    <referenceTo>Business_Assessment__c</referenceTo>
    <relationshipLabel>NBAC Financial Analysis</relationshipLabel>
    <relationshipName>NBAC_Financial_Analysis</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>