force-app/main/default/objects/NBAC_Financial_Analysis__c/fields/Indicator__c.field-meta.xml
<CustomField>
    <fullName>Indicator__c</fullName>
    <label>Indicator</label>
    <length>32</length>
    <type>Text</type>
</CustomField>