force-app/main/default/objects/NBAC_Financial_Analysis__c/fields/Metric__c.field-meta.xml
<CustomField>
    <fullName>Metric__c</fullName>
    <label>Metric</label>
    <length>32</length>
    <type>Text</type>
</CustomField>