force-app/main/default/objects/NBAC_Financial_Analysis__c/fields/Metric_Year_2__c.field-meta.xml
<CustomField>
    <fullName>Metric_Year_2__c</fullName>
    <label>Metric Year 2</label>
    <length>32</length>
    <type>Text</type>
</CustomField>