force-app/main/default/objects/NBAC_Financial_Analysis__c/fields/ValueIndicator__c.field-meta.xml
<CustomField>
    <fullName>ValueIndicator__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>