force-app/main/default/objects/NBAC_Financial_Analysis__c/fields/ValueYear1__c.field-meta.xml
<CustomField>
    <fullName>ValueYear1__c</fullName>
    <label>ValueYear1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>