force-app/main/default/objects/NBAC_Financial_Analysis__c/fields/ValueYear2__c.field-meta.xml
<CustomField>
    <fullName>ValueYear2__c</fullName>
    <label>ValueYear2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>