force-app/main/default/objects/NBAC_Financial_Analysis__c/fields/ValueYear3__c.field-meta.xml
<CustomField>
    <fullName>ValueYear3__c</fullName>
    <label>ValueYear3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>