force-app/main/default/objects/NBAC_Financial_Analysis__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <length>32</length>
    <type>Text</type>
</CustomField>