force-app/main/default/objects/NBAC_Financial_Analysis__c/recordTypes/Indicator.recordType-meta.xml
<RecordType>
    <fullName>Indicator</fullName>
    <active>true</active>
    <label>Indicator</label>
</RecordType>