force-app/main/default/objects/NBAC_Financial_Analysis__c/recordTypes/Metric.recordType-meta.xml
<RecordType>
    <fullName>Metric</fullName>
    <active>true</active>
    <label>Metric</label>
</RecordType>